# dsculptor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gallery.yml
fractals/: README.md  __init__.py  canvas.py  cli.py  escape.py  ifs.py  lsystem.py  newton.py  palette.py
tests/: test_smoke.py
